--- a/itui.rc
+++ b/itui.rc
@@ -3,7 +3,7 @@
 IDB_SHIP bitmap ".\\res\\ship.bmp"
 IDI_SETUP icon ".\\res\\setup.ico"
 
-VS_VERSION_INFO VERSIONINFO
+1 VERSIONINFO
  FILEVERSION 1,0,0,0
  PRODUCTVERSION 1,0,0,0
  FILEFLAGSMASK 0x3fL
